Always enable passthrough raster decoder on Windows

This is a followup to:
https://chromium-review.googlesource.com/c/1444234

That previous patch worked, but only if --enable-oop-rasterization
was passed on the command line.  For finch and field trials,
it's decided much later in gpu_util.cc that oop raster should be
turned on and so the passthrough raster decoder needs to be
enabled earlier.

Bug: 627621
Change-Id: Ibe32cf715bca65faabc76954c46765ba3c18418d
Reviewed-on: https://chromium-review.googlesource.com/c/1487143
Commit-Queue: enne <enne@chromium.org>
Reviewed-by: Jonathan Backer <backer@chromium.org>
Reviewed-by: Antoine Labour <piman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#636588}
Former-commit-id: ca7cb63d231070ca6211fcb509d8c13eddfc58ba